fix: generator reducer interface (#1)

--- a/provision/generators/plop/templates/reducers/reducer.add.hbs
+++ b/provision/generators/plop/templates/reducers/reducer.add.hbs
@@ -1,10 +1,10 @@
 import { useReducer } from "react"
 import * as actions from "./actions/actions";
 import { {{properCase reducerName}}State } from "./interfaces/interfaces"
-import { {{properCase reducerName}}Reducer } from "./state/{{lowerCase reducerName}}Reducer";
+import { {{lowerCase reducerName}}Reducer } from "./state/{{lowerCase reducerName}}Reducer";
 
 const INITIAL_STATE:{{properCase reducerName}}State = {
-    counter: 10,
+    {{lowerCase reducerName}}: 10,
     previous: 15,
     changes: 20
 }
@@ -21,10 +21,6 @@ export const {{properCase reducerName}}ReducerComponent = () => {
     return (
         <><div>
             <h1>{{properCase reducerName}} Reducer</h1>
-            <pre> {JSON.stringify({{lowerCase reducerName}}State, null, 2)}</pre>
-            <button onClick={()=>increaseBy(1)}>+1</button>
-            <button onClick={()=>increaseBy(5)}>+5</button>
-            <button onClick={handleReset}>reset</button>
         </div>
         </>
     )
