--- a/provision/generators/plop/templates/reducers/action.add.hbs
+++ b/provision/generators/plop/templates/reducers/action.add.hbs
@@ -1,9 +1,14 @@
+export enum typeAction{
+    'increaseBy'='increaseBy',
+    'reset'='reset'
+}
+
 export type {{properCase reducerName}}Action =
-    | { type: 'increaseBy',payload: { value: number } }
-    | { type: 'reset' };
+    | { type: typeAction.increaseBy,payload: { value: number } }
+    | { type: typeAction.reset };
 
 export const doReset = (): {{properCase reducerName}}Action => ({
-    type: 'reset'
+    type:  typeAction.reset
 })
 
-export const doIncrement = (value:number): {{properCase reducerName}}Action => ({ type: 'increaseBy', payload: { value } })
+export const doIncrement = (value:number): {{properCase reducerName}}Action => ({ type: typeAction.increaseBy, payload: { value } })
