--- a/src/components/Todo/style/style.css
+++ b/src/components/Todo/style/style.css
@@ -1,5 +1,7 @@
 .todo{
     display:flex;
     flex-direction: column;
-    align-items:center;  
+    gap:30px;
+    width:400px;
+    margin: 30px auto;
 }
